contact, found layout bug

--- a/style.css
+++ b/style.css
@@ -628,21 +628,27 @@ contact
 
 #contact-container {
     display: flex;
-    justify-content: center;
-    height: 500px; 
+    justify-content: center; 
 }
 
 .contact-wrapper {
     display: flex;
+    flex-direction: row;
     margin: 20px;
-    max-width: 800px;
+    max-width: 1000px;
     justify-content: center;
+}
+
+.contact-wrapper .contact-form {
+    margin: 20px;
+    max-width: 700px;
 }
 
 .contact-wrapper .icon-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    max-width: 200px;
 }
 
 .contact-wrapper .icon-container {
@@ -659,9 +665,7 @@ contact
     margin: 5px;
 }
 
-.contact-wrapper .contact-form {
-    margin: 20px;
-}
+
 
 .contact-wrapper input,
 .contact-wrapper textarea {
